# Redstonium

./: .gitignore  CHANGELOG.md  CHANGELOG_PREVIEW.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  LICENSE  README.md  TODO.md  justfile
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/hooks/: pre-commit
.github/workflows/: auto-format.yml  changelog-generator.yml  changelog.yml  ci.yml  dead-code-check.yml  release.yml  test-and-quality.yml
docs/: CHANGELOG_AUTOMATION.md  DEAD_CODE_POLICY.md  SIMPLIFIED_WORKFLOW.md
scripts/: prepare-pr.sh  setup-dev.sh
src/: cli.rs  error.rs  logger.rs  main.rs
src/auth/: constants.rs  microsoft.rs  minecraft.rs  mod.rs  models.rs  storage.rs  xbox.rs
src/commands/: auth.rs  game.rs  instance.rs  java.rs  mod.rs
src/launcher/: files.rs  game.rs  instance.rs  java.rs  java_simple.rs  minecraft_dir.rs  mod.rs  version.rs
tests/: integration_tests.rs
