[package]
name = "rustified"
version = "0.2.0"
edition = "2024"
authors = ["OmarAfet"]
description = "A command-line Minecraft launcher written in Rust."
readme = "README.md"
homepage = "https://github.com/OmarAfet/rustified"
repository = "https://github.com/OmarAfet/rustified"
license = "MIT"
keywords = ["minecraft", "cli", "launcher", "automation", "modpacks", "cross-platform"]
categories = ["games", "command-line-utilities", "automation-tools", "network-programming"]
exclude = [
    "target/",
    ".env",
    "debug_output.log",
    ".vscode/",
    "*.log"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core async and HTTP
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling (transitional - being replaced with custom errors)
anyhow = "1.0"
# Env and OAuth
dotenvy = "0.15"
oauth2 = "4.4"
url = "2.4"
webbrowser = "0.8"
base64 = "0.21"
uuid = { version = "1.4", features = ["v4", "serde"] }
# Logging
log = "0.4"
env_logger = "0.10"
# Time/date
time = { version = "0.3", features = ["formatting", "macros", "local-offset", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Local server for OAuth redirect
tiny_http = "0.12"
# Minecraft launcher functionality
sha1 = "0.10"
clap = { version = "4.0", features = ["derive"] }
zip = "0.6"
futures-util = "0.3"
