[package]
name = "rustified"
version = "0.3.1"
edition = "2024"
authors = ["OmarAfet"]
description = "A command-line Minecraft launcher written in Rust."
readme = "README.md"
homepage = "https://github.com/OmarAfet/rustified"
repository = "https://github.com/OmarAfet/rustified"
license = "MIT"
keywords = [
    "minecraft",
    "cli",
    "launcher",
    "automation",
    "modpacks",
    "cross-platform",
]
categories = [
    "games",
    "command-line-utilities",
    "automation-tools",
    "network-programming",
]
exclude = ["target/", ".env", "debug_output.log", ".vscode/", "*.log"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core async and HTTP
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
thiserror = "1.0"
# OAuth
oauth2 = "4.4"
url = "2.4"
webbrowser = "0.8"
base64 = "0.21"
uuid = { version = "1.4", features = ["v4", "serde"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
] }
time = { version = "0.3", features = [
    "formatting",
    "macros",
    "local-offset",
    "serde",
] }
# Time/date
chrono = { version = "0.4", features = ["serde"] }
# Local server for OAuth redirect
tiny_http = "0.12"
# Minecraft launcher functionality
sha1 = "0.10"
clap = { version = "4.0", features = ["derive"] }
zip = "0.6"
futures-util = "0.3"
